examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx
// error[E421]: Unknown Member in Exposing
//
// `print` is not defined in module `Flow.Primops`.
//
//   examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx:7:1
//   |
// 7 | // `print` is not defined in module `Flow.Primops`.
//   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
//
// Hint:
//   Check the public members of `Flow.Primops` or remove `print` from the exposing list.
//
//
// error[E012]: Unknown Module Member
//
// Module `TypeSystem.GenericResultTree` has no member named `Node`.
//
//   examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx:56:14
//    |
// 56 |     let _x = G.Node(G.demo_tree(), G.demo_tree())
//    |              ^^^^^^
//
// Hint:
//   Check the module's public members or import the correct module.
//
//
// • 1 error • examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx
// error[E018]: Import Not Found
//
// Cannot find module `TypeSystem.GenericResultTree` to import.
//
//   examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx:53:1
//    |
// 53 | import TypeSystem.GenericResultTree as G
//    | ^
//
// Hint:
//   Check that: 1) The module file exists (e.g., `TypeSystem.GenericResultTree.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
//   Looked for module `TypeSystem.GenericResultTree` under roots: examples/type_system/failing, src, lib (imported from examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx).
//
// Found 3 errors across 2 modules.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E012
// expect-error: E018
// expect-error: E421

// E084: module ADT constructors are internal API even via alias import.
import TypeSystem.GenericResultTree as G

fn main() {
    let _x = G.Node(G.demo_tree(), G.demo_tree())
}
